Fix menu height issue on mobile

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -99,6 +99,7 @@
 	inherits: true;
 }
 
+html:has(dialog[open]),
 body:has(dialog[open]) {
 	overflow: hidden;
 }
